# Build-an-AI-Slack-Bot

./: Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
bot/: views.py
cfehome/: settings.py  urls.py
helpers/: __init__.py  env.py
