[project]
name = "django-slack"
version = "0.1.0"
description = ""
authors = [
    {name = "SahilMehdiyev",email = "branchsahil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "python-decouple (>=3.8,<4.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
